fixed the work session to align better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,20 +12,20 @@ body {
     "Lucida Sans", Arial, sans-serif;
 }
 
-.page-wrapper {
+.wrapper {
   max-width: 1200px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: auto;
 }
 /* class Selectors */
 .header {
   padding: 20px;
   background-color: white;
   color: #584f69;
+  width: 100%;
+}
+.header .wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
   justify-content: space-between;
   align-items: center;
 }
@@ -41,10 +41,14 @@ body {
   text-align: right;
 }
 
+.menu-icon {
+  display: none;
+}
+
 /* Navigation */
 .header nav {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 32px;
+  font-size: 24px;
 }
 
 .header nav ul {
@@ -73,8 +77,12 @@ p {
   margin-bottom: 25px;
   background-image: url("../images/headerimage.png");
   background-size: cover;
-  background-position: center;
+  background-position: center; 
+}
+
+.hero .wrapper{
   position: relative;
+  height: 100%;
 }
 
 .hero h2 {
@@ -115,69 +123,77 @@ p {
   color: whitesmoke;
 }
 
-.subtitles {
-  font-size: 40px;
-  color: whitesmoke;
-}
 
-.description {
-  font-size: 20px;
-  color: whitesmoke;
-  padding-bottom: 15px;
-}
 
-/*About Me section*/
-/* #about-me-container {
-  display: flex;
-  padding-bottom: 20px;
-} */
-
-.about-me-left,
-.work-left,
-.contact-me-left {
-  /* padding-left: 20px; */
-}
-.about-me-right {
-  /* padding-left: 20px;
-  width: 70%;
-  font-size: 24px; */
-}
-
-/* Work Section */
-#work-container {
-  
-}
-
+/*Work section*/
 .work-right {
   display: flex;
   flex-direction: column;
   color: whitesmoke;
 }
 
-.second-row,
-.third-row {
-  display: flex;
+.first-row {
+  width: 100%;
+  position: relative;
 }
 
-.second-row-column1,
-.second-row-column2,
-.third-row-column1,
-.third-row-column2 {
+.first-row a {
+  display: block;
+  width: 100%;
+}
+
+.first-row img {
+  width: 100%;
+  height: auto;
+}
+
+.first-row-text {
+  position:absolute;
+  bottom: 20px;
+  padding: 10px;
+  background-color: #584f69;
+}
+.second-row {
   display: flex;
-  flex-direction: column;
-  width: 400px;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.project-item {
+  width: 48%;
   padding-top: 20px;
+  position: relative;
 }
 
-.second-row-column2,
-.third-row-column2 {
-  padding-left: 20px;
+.project-item img {
+  width: 100%;
+  height: 200px;
 }
+
+.project-item-title {
+  position: absolute;
+  bottom: 10px;
+  background-color: #584f69;
+  padding: 10px;
+}
+.subtitles {
+  font-size: 30px;
+  color: whitesmoke;
+}
+
+.description {
+  font-size: 16px;
+  color: whitesmoke;
+  padding-bottom: 15px;
+}
+
 
 /* contact Me*/
 #contact-me-container {
   display: flex;
   padding-bottom: 20px;
+  gap: 10px;
 }
 
 .contact-me-right {
@@ -188,9 +204,11 @@ p {
 
 /* Tablets - header changes color */
 @media screen and (max-width: 992px) {
-  nav {
-    /* background: #772014; */
-    /* flex-direction:wrap; */
+  .menu-icon {
+    display: block;
+  }
+  .header nav {
+    font-size: 20px;
   }
 }
 
